atest/testdata/cli/error/import_error.robot
*** Settings ***
Library           NonExisting
Suite Teardown    No Operation
Test Teardown     No Operation

*** Test Cases ***
Import Error
    No Operation
